<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="enter_bill_amount">Enter bill amount</string>
    <string name="enter_number_of_people">Enter Number of people</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="enter_discount">Enter discount</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="total_bill">Total Bill:</string>
    <string name="each_pays">Each Pays:</string>
</resources>
